tests/NormalTests/paczka1/fuzzy1/12361923.err
Error in line 2: Fk2TrAgWr1Q S916 47,4
Error in line 1: lwA71KR S737 22,2
Error in line 6: lwA71KR S492 76,1
Error in line 7: lwA71KR A336 95,4
Error in line 5: Fk2TrAgWr1Q S737 66,6
Error in line 14: Fk2TrAgWr1Q S916 63,0
Error in line 32: ODI S916 54,75
Error in line 22: ODI A336 69,8
